# Hertz

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  index.html  main.c  meson.build  opengl  opengl.data  opengl.js  opengl.wasm
app/: camera.h  main.c  time.c  time.h
assets/: assimp.c  loader.c  loader.h  scene.glb
cameras/: camera.c  camera.h  fly.c  fly.h  fly_camera.c  fly_camera.h
common/: geometry.h
core/: main.c
counters/: time.h
engine/: api.h  camera.c  camera.h  engine.c  engine.h  events.c  events.h  loader.c  loader.h  mesh.c  mesh.h  scene.c  scene.h  shader.c  shader.h  stb_image.c  util.c  util.h
errors/: errors.c  errors.h
example/: assimp.c  assimp.h  glfw_context.c  glfw_context.h  main.c
examples/: demo.glb
examples/01-assimp/: Makefile  assimp.c  assimp.h  main.c
examples/assimp/: assimp.c  assimp.h  main.c
examples/hello-cube/: hello-cube.c
examples/orbit-cube/: orbit-cube.c
examples/primitives/: primitives.c
examples/utils/: glfw_context.c  glfw_context.h  stb_image.c
gl/: mesh.c  mesh.h  shaders.c  shaders.h  textures.c  textures.h
gl/utils/: shaders.c  shaders.h
hertz/: camera.c  context.c  loader.c  logger.c  material.c  material_store.c  node.c  object.c  program.c  scene.c
hertz/actors/: fly.c  orbit.c
hertz/adt/: list.c  map.c  tree.c
hertz/built-in/materials/: checkerboard.c  solid.c
hertz/built-in/primitives/: cube.c  plane.c  sphere.c
hertz/built-in/shaders/: phong.c  simple.c  wireframe.c
hertz/cameras/: fly.c
hertz/contexts/: glfw.c
hertz/helpers/: binders.c  shaders.c  textures.c
hertz/loaders/: assimp.c
hertz/nodes/: camera.c  light.c  mesh.c  root.c
hertz/objects/: basic.c  camera.c  light.c  mesh.c  root.c
hertz/util/: arena.c  logger.c  panic.c
include/hz/: camera.h  context.h  hertz.h  loader.h  logger.h  material.h  material_store.h  node.h  object.h  program.h  scene.h  types.h  units.h
include/hz/actors/: fly.h  orbit.h
include/hz/adt/: list.h  map.h  tree.h
include/hz/built-in/materials/: checkerboard.h  solid.h
include/hz/built-in/primitives/: cube.h  plane.h  sphere.h
include/hz/built-in/shaders/: phong.h  simple.h  wireframe.h
include/hz/cameras/: fly.h
include/hz/contexts/: glfw.h
include/hz/helpers/: binders.h  io.h  shaders.h  textures.h
include/hz/internal/: alloc.h  context.h  node.h  program.h
include/hz/internal/helpers/: binders.h  shaders.h
include/hz/nodes/: camera.h  light.h  mesh.h  root.h
include/hz/objects/: basic.h  camera.h  light.h  mesh.h  root.h
include/hz/util/: arena.h  common.h  logger.h  mem.h  panic.h
include/hz/utils/: common.h  compiler.h  container_of.h
include/internal/: alloc.h  object.h
include/internal/helpers/: binders.h
init/: main.c
loaders/: assimp.c  assimp.h  model.c  model.h  obj_loader.c  obj_loader.h
logger/: logger.c  logger.h
objects/: basic.c  basic.h  mesh.c  mesh.h  object.c  object.h
render/: camera.h  object.c  object.h  render.c  render.h  scene.c  scene.h
res/: horse.mtl  land.mtl  ship.stl  skybox.mtl  skybox.stl  wall.mtl
scene/: scene.c  scene.h
scripts/: build-utils.mk
shaders/: psycho.frag  psycho.vert  simple.frag  simple.vert  skybox.frag
src/: object.c  scene.c
src/built-in/shaders/: simple.c
src/cameras/: fly.c
src/helpers/: io.c  shaders.c
src/loaders/: assimp.c
src/misc/: stb_image.c
src/objects/: basic.c
tools/: update-header-guards.sh
utils/: common.h  defines.h  files.c  files.h  glfw_context.c  glfw_context.h  glfw_ctx_helper.c  glfw_ctx_helper.h  linmath.h  list.c  list.h  log.c  log.h  stb_image.c
utils/gl/: io.c  io.h  shaders.c  shaders.h  textures.c  textures.h
